[tool.poetry]
name = "sb-obp"
version = "0.5.9"
description = "Open Bandit Pipeline: a python library for off-policy evaluation and learning"
authors = ["Yuta Saito <ys552@cornell.edu>"]
license = "Apache License 2.0"
packages = [
    {include = "obp"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
torch = [
    {version = "^1.9.0", python = "<3.9"},
    {version = "^2.2.0", python = ">=3.9"}
]
scikit-learn = "^1.0.2"
pandas = "^1.3.5"
numpy = [
    {version = "^1.26.0", python = ">=3.9"},
    {version = "^1.21.2", python = "<3.9"}
]
matplotlib = "^3.4.3"
tqdm = "^4.62.2"
scipy = [
    {version = "^1.12.0", python = ">=3.9"},
    {version = "<=1.11", python = "<3.9"},
]
PyYAML = "^6.0.1"
seaborn = "^0.13.1"
pyieoe = "^0.1.1"
pingouin = "^0.5.0"
mypy-extensions = "^0.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "22.1.0"
pytest = "^6.2.5"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
src_paths = ['obp', 'tests', 'examples', 'benchmark']
line_length = 88
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'

[tool.pytest.ini_options]
addopts = "--color=yes"
